--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "git.ignoreLimitWarning": true,
-  "cmake.generator": "Visual Studio 15 2017"
+  "cmake.generator": "Visual Studio 15 2017",
+  "files.encoding": "gb2312"
 }
