调整CMake版本要求。删除gb2312

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "git.ignoreLimitWarning": true,
-  "cmake.generator": "Visual Studio 15 2017",
-  "files.encoding": "gb2312"
+  "cmake.generator": "Visual Studio 15 2017"
+  // "files.encoding": "gb2312
 }
