--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,26 @@
     "version": "0.2.0",
     "configurations": [
       {
+        "name": "(gdb) Bash on Windows Launch",
+        "type": "cppdbg",
+        "request": "launch",
+        "program": "${workspaceRoot}\\build\\hello.exe",
+        "args": [],
+        "stopAtEntry": false,
+        "cwd": "${workspaceRoot}",
+        "miDebuggerPath": "C:\\cygwin\\bin\\gdb.exe",
+        "environment": [],
+        "externalConsole": true,
+        "setupCommands": [
+            {
+                "description": "Enable pretty-printing for gdb",
+                "text": "-enable-pretty-printing",
+                "ignoreFailures": true
+            }
+        ],
+        "preLaunchTask": "Build"
+      },
+      {
         "name": "(Windows) Launch",
         "type": "cppvsdbg",
         // "type": "cppdbg",
