--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,28 +20,39 @@
     {
       "taskName": "preMake",
       "type": "shell",
-      "command": "cmd",
-      "args": [
-        "/C", "mkdir build"
-      ]
+      "command": "cmd /c mkdir build"
+      // "args": [
+      //   "/C", "mkdir build"
+      // ]
     },
     {
-      "taskName": "cmake",
+      "taskName": "CMake with g++",
       "type": "shell",
-      "command": "cmake",
+      "command": "cmake .. -DCMAKE_CXX_COMPILER=g++ -G 'Unix Makefiles'",
       "options": {
         "cwd": "${workspaceRoot}/build"
       },
-      "args": [
-        ".."
-      ],
-      "presentation": {
-        "echo": true,
-        "reveal": "always",
-        "focus": false,
-        "panel": "shared"
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      }
+    },
+    {
+      "taskName": "make",
+      "type": "shell",
+      "command": "make",
+      "options": {
+        "cwd": "${workspaceRoot}/build"
       },
-      "dependsOn" : ["preMake"]
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
+      "dependsOn": "CMake with g++"
+    },
+    {
+      "taskName": "Build",
+      "dependsOn": ["make"]
     }
   ]
 }
