--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -1,4 +1,9 @@
 cmake_minimum_required(VERSION 3.6.0)
 project(hello)
+
+set(CMAKE_C_COMPILER "gcc")
+set(CMAKE_CXX_COMPILER "g++")
 set(SOURCE helloCPP.cpp)
+
+message("cxx Flags: " ${CMAKE_CXX_FLAGS})
 add_executable(${PROJECT_NAME} ${SOURCE})
